--- a/master.adoc
+++ b/master.adoc
@@ -1,6 +1,6 @@
-= eBook Template
-:author: Bruno Rocha
-:email: email@server.com
+= Digesting React: Learn React without racking your brains
+:author: Nathan Sebhastian
+:email: nathan@sebhastian.com
 :revnumber: 1.0
 :revdate: January 1st, 2021
 :doctype: book
@@ -8,7 +8,10 @@
 :icons: font
 :data-uri:
 :lang: en
-:language: python
+:source-highlighter: rouge
+:rouge-style: igorpro
+:pdf-theme: pdf-theme.yml
+:front-cover-image: image:cover.png[Front Cover,1050,1600]
 
 [preface]
 include::chapters/about.adoc[]
